Java 9 compatibility.
Deprecated features:

* Class.newInstance (use Constructor.newInstance)

Java EE features:

* Add --add-modules java.xml.bind; also requires Ant 1.9.4 or later